* Ambiance/gtk-3.0/gtk-widgets.css: * Radiance/gtk-3.0/gtk-widgets.css:   - Fix spacing in GtkModelMenuItem between icon and label.

--- a/Ambiance/gtk-3.0/gtk-widgets.css
+++ b/Ambiance/gtk-3.0/gtk-widgets.css
@@ -1092,6 +1092,10 @@ GtkComboBox .menu .menuitem *:insensitive {
     text-shadow: 0 -1px shade (@dark_bg_color, 0.7);
 }
 
+GtkModelMenuItem GtkBox GtkImage {
+    padding-right: 6px;
+}
+
 /************
  * notebook *
  ************/
